--- a/time-tracker/public/index.html
+++ b/time-tracker/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Tracker</title>
-    <script type="module" src="app.ts"></script>
+    <script type="module" src="./app.ts"></script>
     <script type="module">
         import { faker } from "https://cdn.skypack.dev/@faker-js/faker";
         window.faker = faker;
